# qa_bot

./: README.md  app.py  llamaindex_load.py  load_env.py  main.py  main_chain.py  memory.py  pyproject.toml  requirements.txt  tools.py
docs/AerisNode X7/: data.txt
docs/FluxCore Vesta/: data.txt
docs/company/: data.txt
docs/products/: data.txt
index/AerisNode_X7/: default__vector_store.json  docstore.json  index_store.json
index/FluxCore_Vesta/: default__vector_store.json  docstore.json  index_store.json
index/company/: default__vector_store.json  docstore.json  index_store.json
index/products/: default__vector_store.json  docstore.json  index_store.json
