[tool.poetry]
name = "qa-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
llama-index = "^0.12.25"
llama-index-agent-openai = "^0.4.6"
langchain-tavily = "^0.1.5"
langchain-community = "^0.3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
